--- a/test8.html
+++ b/test8.html
@@ -6,5 +6,5 @@
 <body>
     <h1>HTML is for babies, making me some sort of a <b>MEGA</b> baby</h1>
     <p>There's a lot of information, and the instructor is using a different program than me. Needless to say, its kind of a mess</p>
-    <a href="http://pornhub.com">Have some boobies for your trouble</a>
-</body>
+    <a href="http://pornhub.com" target="_blank" title="I'm not fucking happy about it though" >I wanted to make this an image, but that's okay <b>I GUESS</b</a> <br>
+<img src="monk.jpg">
